Added option to select linking mode in product system builder

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -6,7 +6,6 @@ ActivityVariable=Activity variable
 Actor=Actor
 Actors=Actors
 Add=Add
-AddConnectedProcesses=Add connected processes
 AddIndicator=Add indicator
 AddNewChildCategory=Add new child category
 AddScore=Add score
@@ -35,6 +34,7 @@ AsDefinedInProcesses=As defined in processes
 AssessDataQuality=Assess data quality
 AssignUnits=Assign units
 Author=Author
+AutoLinkProcesses=Auto-link processes
 AvoidedProduct=Avoided product
 AvoidedProductFlow=Avoided product flow
 AvoidedWaste=Avoided waste
@@ -117,7 +117,6 @@ Connect=Connect
 ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
 ConnectToRepository=Connect to repository...
-ConnectWithSystemProcessesIfPossible=Connect with system processes if possible
 ConnectingToRepository=Connecting to repository: 
 Connection=Connection
 ConnectionFailed=Connection failed
@@ -364,6 +363,7 @@ ILCD_RunImport=Run Import
 ILCD_SearchFailedMessage=Network search failed: 
 ILCD_SearchPageDescription=Search and select processes for the import
 Id=Id
+IgnoreDefaultProviders=Ignore default providers
 ImageExport=Image export
 ImpactAnalysis=Impact analysis
 ImpactAssessmentMethod=Impact assessment method
@@ -559,7 +559,7 @@ NumberOfSimulations=Number of simulations
 OK=OK
 OfProduct=of product
 OnlineHelp=Online help
-OnlyConnectDefaultProviders=Only connect default providers
+OnlyLinkDefaultProviders=Only link default providers
 Open=Open
 OpenDatabase=Open database
 OpenEditor=Open editor
@@ -604,6 +604,8 @@ Polygon=Polygon
 Port=Port
 Position=Position
 Prefer=Prefer: {0}
+PreferDefaultProviders=Prefer default providers
+PreferredProcessType=Preferred process type
 Preparing=Preparing
 PreviousCommit=Previous commit
 Price=Price
@@ -632,6 +634,7 @@ Project=Project
 ProjectSetup=Project setup
 Projects=Projects
 Properties=Properties
+ProviderLinking=Provider linking
 Providers=Providers
 Publication=Publication
 QuantitativeReference=Quantitative reference
