Applying format in general, not only to inputs/outputs table

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -26,7 +26,7 @@ Amount=Amount
 Analysis=Analysis
 AnalysisResultOf=Analysis result of
 AnalyzingForProblems=Analyzing for problems
-ApplyFormatToInputsOutputs=Apply format to inputs/outputs in process editor
+ApplyFormat=Apply formatting
 ApplyingDatabaseUpdates=Applying database updates
 AreYouSureYouWantToCheckout=Are you sure you want to checkout the selected commit? This action will override your current database state and cannot be undone.
 ArithmeticMean=Arithmetic mean
@@ -415,6 +415,7 @@ Inventory=Inventory
 InventoryResult=Inventory result
 InventoryResults=Inventory results
 IsDefault=Is default
+IsDefaultProvider=Is default provider
 IsInvalidFormula=is an invalid formula
 IsNotValidNumber=is not a valid number
 IsNotValidParameterName=is not a valid parameter name
