improved layout for provider check dialog

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -636,6 +636,7 @@ ProjectSetup=Project setup
 Projects=Projects
 Properties=Properties
 ProviderLinking=Provider linking
+Provider=Provider
 Providers=Providers
 Publication=Publication
 QuantitativeReference=Quantitative reference
