--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -534,7 +534,7 @@ NoQuantitativeReferenceSelected=No quantitative reference selected
 NoReferenceFlowPropertySelected=No reference flow property selected
 NoReferenceProcessSelected=No process with valid reference product output or waste input selected
 NoReferenceSet=No reference set
-NoRegionalizedInformation=No regionalized information
+NoRegionalizedInformation_Message=No regionalized information available for this system
 NoRisk=No risk
 NoShapefileParameterSelected=There is no shapefile parameter selected that could be added as method parameter
 NoUnitGroupSelected=No unit group selected
