updated labels etc.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -117,7 +117,7 @@ Connect=Connect
 ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
 ConnectToRepository=Connect to repository...
-ConnectingToRepository=Connecting to repository: 
+ConnectingToRepository=Connecting to repository:
 Connection=Connection
 ConnectionFailed=Connection failed
 ConnectionWithAnonymousAccess=Connection with anonymous access.
@@ -360,7 +360,7 @@ ILCD_CONNECTION_WORKS_MSG=Connection works.
 ILCD_NO_READ_OR_WRITE_ACCESS_MSG=You do not have read or write access
 ILCD_NetworkImport=Network Import
 ILCD_RunImport=Run Import
-ILCD_SearchFailedMessage=Network search failed: 
+ILCD_SearchFailedMessage=Network search failed:
 ILCD_SearchPageDescription=Search and select processes for the import
 Id=Id
 IgnoreDefaultProviders=Ignore default providers
@@ -445,7 +445,7 @@ LocalDatabase=Local database
 LocalModel=Local model
 Location=Location
 Locations=Locations
-LogFile=Log file 
+LogFile=Log file
 LogNormalDistribution=Logarithmic normal distribution
 Longitude=Longitude
 LowOpportunity=Low opportunity
@@ -627,7 +627,7 @@ ProducedBy=Produced by
 Product=Product
 ProductSystem=Product system
 ProductSystemExcelExport=Product system Excel export
-ProductSystemExcelExportMessage=Please select a directory to export the product system to. 
+ProductSystemExcelExportMessage=Please select a directory to export the product system to.
 ProductSystemStatistics=Product system statistics
 ProductSystems=Product systems
 Progress=Progress
@@ -887,3 +887,8 @@ WithPassword=With password
 Year=Year
 Yes=Yes
 ZipCode=Zip code
+LinkingProperties=Linking properties
+ProcessesWithoutProviders=Processes without providers
+GeneralDatabaseProperties=General database properties
+UsageType=Usage type
+CheckLinkingProperties=Check linking properties
