Bulk-replace now supports selecting exchanges and/or impacts

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -43,6 +43,7 @@ AvoidedWasteFlow=Avoided waste flow
 BackgroundData=Background data
 BackupDatabase=Backup database
 BaseUncertainty=Base uncertainty
+Both=Both
 Browse=Browse
 BrowseLocalFiles=Browse local files...
 BuildNextTier=Build next tier
@@ -684,6 +685,7 @@ RemoveSelected=Remove selected
 RemoveSupplyChain=Remove supply chain
 Rename=Rename
 ReplaceFlow=Replace flow
+ReplaceIn=Replace in
 ReplaceProvider=Replace provider
 Report=Report
 ReportName=Label in report
