updated translations (or removed # for untranslated
strings)

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,5 +1,6 @@
-#Tue Feb 05 17:36:49 CET 2019
+#Thu Apr 04 14:55:53 CEST 2019
 ALocationCodeIsRequired=A location code is required
+AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
 ActivityQuantity=Activity quantity
 ActivityUnit=Activity unit
@@ -89,6 +90,7 @@ Clear=Clear
 ClearData=Clear data
 ClickHereToChangeDisplay=Click here to change the display
 Close=Close
+CloseAll=Close all
 CloseDatabase=Close database
 Code=Code
 Collapse=collapse
@@ -270,6 +272,7 @@ ExchangesAreUsed=One or more of the selected exchanges are used already in a pro
 ExcludeExchangesWithDefaultProviders=Exclude exchanges with default providers
 ExcludeZeroEntries=Exclude zero entries
 ExcludeZeroValues=Exclude zero values
+Exit=Exit
 Expand=expand
 ExpandAll=Expand all
 Export=Export...
@@ -713,6 +716,7 @@ SamplingProcedure=Sampling procedure
 SankeyDiagram=Sankey diagram
 Sankey_ScaleDescription=Process colour scale (contributions in [%])
 Save=Save
+SaveAll=Save all
 SaveAs=Save as...
 SaveAsImage=Save as image
 SaveAsLCIResult=Save as LCI result
@@ -803,6 +807,7 @@ StandardDeviation=Standard deviation
 StandardDeviationFormula=Standard deviation (formula)
 Start=Start
 StartDate=Start date
+StartIPCServer=Start an IPC Server
 Statistics=Statistics
 StoreInventoryResult=Store inventory result
 SubCategory=Sub-category
