--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,5 +1,6 @@
-#Tue Feb 05 17:36:49 CET 2019
+#Thu Apr 04 14:55:53 CEST 2019
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
+AboutOpenLCA=\u00DCber openLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
 ActivityQuantity=Merkmal der Aktivit\u00E4t
 ActivityUnit=Einheit der Aktivit\u00E4t
@@ -79,6 +80,7 @@ City=Stadt
 ClearData=Daten l\u00F6schen
 ClickHereToChangeDisplay=Bitte klicken Sie hier um die Ansicht zu wechseln
 Close=Schlie\u00DFen
+CloseAll=Alles schlie\u00DFen
 CloseDatabase=Datenbank schlie\u00DFen
 Code=Code
 Collapse=zusammenklappen
@@ -245,6 +247,7 @@ ExchangesAreUsed=Einer oder mehrere der ausgew\u00E4hlten Inputs/Outputs werden 
 ExcludeExchangesWithDefaultProviders=Fl\u00FCsse mit default-Lieferanten ausschlie\u00DFen
 ExcludeZeroEntries=Null-Eintr\u00E4ge nicht anzeigen
 ExcludeZeroValues=Fl\u00FCsse ohne Wert austauschen
+Exit=Beenden
 Expand=vergr\u00F6\u00DFern
 ExpandAll=Alle ausklappen
 Export=Export...
@@ -654,6 +657,7 @@ SamplingProcedure=Verfahren der Datenerhebung
 SankeyDiagram=Sankey-Diagramm
 Sankey_ScaleDescription=Prozessfarbskala (Beitr\u00E4ge in [%])
 Save=Speichern
+SaveAll=Alles speichern
 SaveAs=Speichern unter...
 SaveAsImage=Als Bild speichern
 SaveChanges=\u00C4nderungen speichern
@@ -733,6 +737,7 @@ StandardDeviation=Standardabweichung
 StandardDeviationFormula=Standardabweichung (Formel)
 Start=Start
 StartDate=Startdatum
+StartIPCServer=Einen IPC-Server starten
 Statistics=Statistiken
 SubCategory=Unterkategorie
 SubgroupByProcesses=Gruppiere nach Prozessen
