--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -1,4 +1,4 @@
-#Tue Feb 05 17:36:49 CET 2019
+#Thu Apr 04 14:55:53 CEST 2019
 ALocationCodeIsRequired=Geok\u00F3d megad\u00E1sa k\u00F6telez\u0151
 AccessAndUseRestrictions=Hozz\u00E1f\u00E9r\u00E9si \u00E9s felhaszn\u00E1l\u00E1si megk\u00F6t\u00E9sek
 ActivityQuantity=Tev\u00E9kenys\u00E9g mennyis\u00E9g
