--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Tue Feb 05 17:36:49 CET 2019
+#Thu Apr 04 14:55:53 CEST 2019
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
