--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Tue Feb 05 17:36:49 CET 2019
+#Thu Apr 04 14:55:53 CEST 2019
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
