--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Tue Feb 05 17:36:49 CET 2019
+#Thu Apr 04 14:55:53 CEST 2019
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
