--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Tue Feb 05 17:36:49 CET 2019
+#Thu Apr 04 14:55:53 CEST 2019
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
