Added new relevant fields to property labels in diff tool

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -237,6 +237,7 @@ DirectContribution=Direct contribution
 DirectContributionsFlowResultsOverview=Top 5 contributions to flow results - overview
 DirectContributionsImpactCategoryResultsOverview=Top 5 contributions to impact category results - overview
 Direction=Direction
+Disabled=Disabled
 DisconnectFromRepository=Disconnect from repository
 Display=Display
 DoNotShowThisMessageAgain=Do not show this message again
@@ -331,6 +332,7 @@ Function=Function
 FunctionalUnit=Functional unit
 GeneralDatabaseProperties=General database properties
 GeneralInformation=General information
+Generator=Generator
 Geography=Geography
 GeographyDescription=Geography description
 GeometricMean=Geometric mean
