Implemented library feature enhancement

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -663,7 +663,7 @@ ReallyDeleteShapeFile=Do you really want to delete the selected shape file? All 
 RebuildIndex=Rebuild index
 RebuildingIndex=Rebuilding index
 RecalculateQuestion=Values will be recalculated, do you want to proceed?
-RecognizedLibraryDatasetsDescription=The following data sets were recognized as library data sets. Please be careful when commiting this data since it might violate licence restrictions.
+RecognizedLibraryDatasetsDescription=Some of the selected data sets were identified as library data sets (e.g. may underlie license restrictions). If you are allowed to commit changes to these data sets, they are marked with a yellow warning sign, otherwise with a red forbidden sign.
 ReconnectProcesslink=reconnect processlink
 Reference=Reference
 ReferenceCurrency=Reference currency
@@ -843,6 +843,7 @@ TotalRequirements=Total requirements
 Tree=tree
 TriangleDistribution=Triangle distribution
 Type=Type
+TypeOfRestriction=Type of restriction
 URL=URL
 Uncertainties=Uncertainties
 Uncertainty=Uncertainty
