--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -602,9 +602,7 @@ Quantity=Quantidade
 QuickResults=Resultados r\u00E1pidos
 RawValue=Valor bruto
 ReallyDeleteShapeFile=Voc\u00EA realmente quer apagar o arquivo selecionado? Todas as altera\u00E7\u00F5es ser\u00E3o salvas automaticamente.
-RecalculateQuestion=Os valores ser\u00E3o recalculados, voc\u00EA deseja prosseguir?
-RecognizedLibraryDatasetsDescription=Os seguintes datasets foram reconhecidos como datasets de biblioteca. Tenha cuidado ao enviar esses dados, uma vez que pode violar restri\u00E7\u00F5es de licen\u00E7a.
-ReconnectProcesslink=Reconectar conex\u00E3o com processo
+RecalculateQuestion=Os valores ser\u00E3o recalculados, voc\u00EA deseja prosseguir?ReconnectProcesslink=Reconectar conex\u00E3o com processo
 Reference=Refer\u00EAncia
 ReferenceCurrency=Refer\u00EAncia de circula\u00E7\u00E3o
 ReferenceFlowProperty=Refer\u00EAncia de propriedade de fluxo
