change the term `Cut-off` to `Don't show <`

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Thu Apr 04 14:55:53 CEST 2019
+#Mon May 27 17:11:15 CEST 2019
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -242,6 +242,7 @@ DisconnectFromRepository=Disconnect from repository
 Display=Display
 DoNotShowThisMessageAgain=Do not show this message again
 DoYouReallyWantToDelete=Do you really want to delete {0}
+DontShowSmallerThen=Don\u2018t show <
 Dot=Dot
 DownloadingData=Downloading data...
 EcoSpold2Export=EcoSpold 2 Export
