--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Thu Apr 04 14:55:53 CEST 2019
+#Mon May 27 17:11:15 CEST 2019
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
@@ -602,7 +602,7 @@ Quantity=Quantidade
 QuickResults=Resultados r\u00E1pidos
 RawValue=Valor bruto
 ReallyDeleteShapeFile=Voc\u00EA realmente quer apagar o arquivo selecionado? Todas as altera\u00E7\u00F5es ser\u00E3o salvas automaticamente.
-RecalculateQuestion=Os valores ser\u00E3o recalculados, voc\u00EA deseja prosseguir?ReconnectProcesslink=Reconectar conex\u00E3o com processo
+RecalculateQuestion=Os valores ser\u00E3o recalculados, voc\u00EA deseja prosseguir?ReconnectProcesslink\=Reconectar conex\u00E3o com processo
 Reference=Refer\u00EAncia
 ReferenceCurrency=Refer\u00EAncia de circula\u00E7\u00E3o
 ReferenceFlowProperty=Refer\u00EAncia de propriedade de fluxo
