smaller label things

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -153,7 +153,7 @@ CouldNotOverwriteFile=Could not overwrite file
 Country=Country
 Coverage=Coverage
 CreateANewDatabase=Create a new database
-CreateANewFlowForTheProcess=Create a new flow for the process
+CreateANewFlowForTheProcess=Create a new flow for the process (as quantitative reference)
 CreateANewProductFlowForTheProcess=Create a new product flow for the process
 CreateAWasteTreatmentProcess=Create a waste treatment process
 CreateDatabase=Create database
