Added keep local & discard local options in diff dialog

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -238,6 +238,7 @@ DirectContributionsFlowResultsOverview=Top 5 contributions to flow results - ove
 DirectContributionsImpactCategoryResultsOverview=Top 5 contributions to impact category results - overview
 Direction=Direction
 Disabled=Disabled
+DiscardLocalChanges=Discard local changes
 DisconnectFromRepository=Disconnect from repository
 Display=Display
 DoNotShowThisMessageAgain=Do not show this message again
@@ -589,6 +590,7 @@ Other=Other
 OutOfMemory=Out of memory
 Output=Output
 Outputs=Outputs
+OverwriteRemoteChanges=Overwrite remote changes
 OverwriteFile=Overwrite file
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 Parameter=Parameter
