Removed colon from message and moved it to text in code to add missing whitespace

--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -96,7 +96,7 @@ Connect=Connectar
 ConnectProviders=Connectar prove\u00EFdors
 ConnectRecipients=Connectar destinataris
 ConnectToRepository=Connectar al repositori...
-ConnectingToRepository=Connectant al repositori\:
+ConnectingToRepository=Connectant al repositori
 Connection=Connexi\u00F3
 ConnectionFailed=No s'ha pogut connectar
 ConsumedBy=Consumit per
