--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -106,7 +106,7 @@ Connect=Verbinde
 ConnectProviders=Provider verbinden
 ConnectRecipients=Empf\u00E4nger verbinden
 ConnectToRepository=Verbinden zum Datenspeicher
-ConnectingToRepository=Verbinden zum Datenspeicher\:
+ConnectingToRepository=Verbinden zum Datenspeicher
 Connection=Verbindung
 ConnectionFailed=Verbindung fehlgeschlagen
 ConsumedBy=Input in
