--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -103,7 +103,7 @@ Connect=Conectar
 ConnectProviders=Conectar proveedores
 ConnectRecipients=Conectar destinatarios
 ConnectToRepository=Conectar al repositorio...
-ConnectingToRepository=Conectando al repositorio\:
+ConnectingToRepository=Conectando al repositorio
 Connection=Conexi\u00F3n
 ConnectionFailed=No se pudo conectar
 ConsumedBy=Consumido por
