--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -103,7 +103,7 @@ Connect=\u00D6sszekapcsol\u00E1s
 ConnectProviders=El\u0151\u00E1ll\u00EDt\u00F3k kapcsol\u00E1sa
 ConnectRecipients=Felhaszn\u00E1l\u00F3k kapcsol\u00E1sa
 ConnectToRepository=Kapcsol\u00F3d\u00E1s a t\u00E1rhelyhez...
-ConnectingToRepository=Kapcsol\u00F3d\u00E1s a t\u00E1rhelyhez\:
+ConnectingToRepository=Kapcsol\u00F3d\u00E1s a t\u00E1rhelyhez
 Connection=Kapcsol\u00F3d\u00E1s
 ConnectionFailed=Kapcsol\u00F3d\u00E1s sikertelen
 ConsumedBy=Fogyasztja\:
