--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -97,7 +97,7 @@ Connect=Connetti
 ConnectProviders=Collega fornitori
 ConnectRecipients=Collega destinatari
 ConnectToRepository=Connetto alla repository...
-ConnectingToRepository=Connessione alla repository\:
+ConnectingToRepository=Connessione alla repository
 Connection=Connessione
 ConnectionFailed=Connessione fallita
 ConsumedBy=Consumato da
