--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -86,7 +86,7 @@ Connect=Ba\u011Flan
 ConnectProviders=Tedarik\u00E7ileri ba\u011Fla
 ConnectRecipients=Al\u0131c\u0131lar\u0131 ba\u011Fla
 ConnectToRepository=Havuza ba\u011Fla...
-ConnectingToRepository=Havuza ba\u011Flan\u0131yor\:
+ConnectingToRepository=Havuza ba\u011Flan\u0131yor
 Connection=Ba\u011Flant\u0131
 ConnectionFailed=Ba\u011Flant\u0131 ba\u015Far\u0131s\u0131z
 ConsumedBy=.... taraf\u0131ndan kullan\u0131l\u0131yor
