--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -122,7 +122,7 @@ Connect=Connect
 ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
 ConnectToRepository=Connect to repository...
-ConnectingToRepository=Connecting to repository\:
+ConnectingToRepository=Connecting to repository
 Connection=Connection
 ConnectionFailed=Connection failed
 ConnectionWithAnonymousAccess=Connection with anonymous access.
