Using type and id for unique index id

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -875,6 +875,7 @@ UpdateMinorVersion=Update minor version
 UpdateReferenceCurrency=Update reference currency...
 UpdateWasAlreadyAddedOrExecuted=Update was already added or executed
 UpdatingProductSystem=Updating product system
+UpgradingRepositoryIndex=Upgrading repository index
 UpstreamInclDirect=Upstream incl. direct
 UpstreamTotal=Upstream total
 Usage=Usage
