Supporting multiple connections to repositories without disconnecting

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -2,6 +2,7 @@
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
+Active=Active
 ActivityQuantity=Activity quantity
 ActivityUnit=Activity unit
 ActivityVariable=Activity variable
@@ -10,6 +11,7 @@ Actors=Actors
 Add=Add
 AddIndicator=Add indicator
 AddNewChildCategory=Add new child category
+AddNewRepository=Add new repository
 AddScore=Add score
 AddSection=Add section
 AddToMethodParameters=Add to method parameters
@@ -118,10 +120,10 @@ CompressDatabase=Compress database
 CompressingDatabase=Compressing database...
 Configuration=Configuration
 ConfigureEcospoldMessage=On this page you can configure the exported EcoSpold format
+ConfigureRepositories=Configure repositories
 Connect=Connect
 ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
-ConnectToRepository=Connect to repository...
 ConnectingToRepository=Connecting to repository
 Connection=Connection
 ConnectionFailed=Connection failed
@@ -454,6 +456,7 @@ Library=Library
 LibraryDataSets=Library data sets
 Line=Line
 LinkingProperties=Linking properties
+LoadingRepositoryList=Loading repository list
 Local=Local
 LocalDatabase=Local database
 LocalModel=Local model
