display characterization factors related to
LCIA categories in flows

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -383,9 +383,9 @@ ImpactAssessmentMethods=Impact assessment methods
 ImpactAssessmentResults=Impact assessment results
 ImpactCategories=Impact categories
 ImpactCategory=Impact category
-ImpactFactor=Impact factor
-ImpactFactors=Impact factors
-ImpactResult=Impact result
+ImpactFactor=Characterization factor
+ImpactFactors=Characterization factors
+ImpactResult=Impact assessment result
 Import=Import...
 ImportData=Import data
 ImportDatabase=Import database
