actor: move zip-code field

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -253,7 +253,7 @@ EcoSpoldConfiguration=EcoSpold Configuration
 Economic=Economic
 Edit=Edit
 ElementaryFlow=Elementary flow
-Email=e-mail
+Email=Email
 EmptyDatabase=Empty database
 EmptyValueMessage=The given value is empty.
 EnableCollaboration=Enable collaboration
