updated IPC dialog
* with start-stop button and status text

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -915,3 +915,5 @@ WithPassword=With password
 Year=Year
 Yes=Yes
 ZipCode=Zip code
+StartIPCInfo=Click on the `run` button to start the IPC server.
+StopIPCInfo=The IPC server is running. Click on the `stop` button or close this dialog to stop it.
