Implemented Tag ui for 1.x

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -825,6 +825,7 @@ SystemDefinesUncertainties=System defines uncertainties
 SystemProcess=System process
 SystemSaveProceedQuestion=In order to perform the requested task the product system must be saved. Do you want to proceed?
 Tab=Tab
+Tags=Tags
 TargetAmount=Target amount
 Technology=Technology
 TechnologyDescription=Technology description
