Updated value labels, new fields, etc for json merge tool

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -37,7 +37,6 @@ ArithmeticMean=Arithmetic mean
 AsDefinedInProcesses=As defined in processes
 AssessDataQuality=Assess data quality
 AssignUnits=Assign units
-Author=Author
 AutoLinkProcesses=Auto-link processes
 AvoidedProduct=Avoided product
 AvoidedProductFlow=Avoided product flow
@@ -333,7 +332,6 @@ FormulaInterpreter=Formula interpreter
 FoundProblems=Found problems\:
 FromDirectory=From directory\:
 Function=Function
-FunctionalUnit=Functional unit
 GeneralDatabaseProperties=General database properties
 GeneralInformation=General information
 Generator=Generator
@@ -347,7 +345,6 @@ Geometry=Geometry
 Global=Global
 GlobalParameter=Global parameter
 GlobalParameters=Global parameters
-Goal=Goal
 GoalAndScope=Goal and scope
 Group=Group
 Grouping=Grouping
@@ -428,11 +425,13 @@ InvalidValue=Invalid value
 Inventory=Inventory
 InventoryResult=Inventory result
 InventoryResults=Inventory results
+IsBaseline=Is baseline
 IsDefault=Is default
 IsDefaultProvider=Is default provider
 IsInvalidFormula=is an invalid formula
 IsNotValidNumber=is not a valid number
 IsNotValidParameterName=is not a valid parameter name
+IsProtected=Is protected
 IsReference=Is reference
 KeepLocalModel=Keep local model
 KeepModelDeleted=Keep model deleted
@@ -445,7 +444,6 @@ LCIMethod=LCI method
 Label=Label
 Language=Language
 LastChange=Last change
-LastModificationDate=Last modification date
 Latitude=Latitude
 Layout=Layout
 LayoutAs=Layout as {0}
@@ -597,7 +595,6 @@ OverwriteRemoteChanges=Overwrite remote changes
 OverwriteFile=Overwrite file
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 Parameter=Parameter
-ParameterAggregationFunction=Parameter aggregation function
 ParameterAlreadyAdded=Parameter already added
 ParameterDescriptionTable=Parameter description table
 ParameterScope=Parameter scope
@@ -605,6 +602,7 @@ ParameterValueTable=Parameter value table
 ParameterWithSameNameExists=A parameter with the same name already exists
 ParameterWithSameNameExistsInMethod=A parameter with the same name already exists in this LCIA method
 Parameters=Parameters
+ParameterSets=Parameter sets
 Password=Password
 Paste=Paste
 PedigreeMatrix=Pedigree matrix
