--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -428,11 +428,14 @@ InventoryResults=Inventory results
 IsBaseline=Is baseline
 IsDefault=Is default
 IsDefaultProvider=Is default provider
+IsDisabled=Is disabled
 IsInvalidFormula=is an invalid formula
 IsNotValidNumber=is not a valid number
 IsNotValidParameterName=is not a valid parameter name
 IsProtected=Is protected
 IsReference=Is reference
+IsWithCosts=Is with costs
+IsWithRegionalization=Is with regionalization
 KeepLocalModel=Keep local model
 KeepModelDeleted=Keep model deleted
 KmlEditor=KML Editor
