Implemented conflict resolution

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -99,7 +99,8 @@ ColumnSeparator=Column separator
 Comma=Comma
 Comment=Comment
 Comments=Comments\:
-Commit=Commit...
+Commit=Commit
+CommitAndPush=Commit and Push
 CommitChangesToRepository=Commit changes to repository
 CommitDate=Commit date
 CommitError=An error occurred while receiving commit data
@@ -239,7 +240,7 @@ DirectContributionsImpactCategoryResultsOverview=Top 5 contributions to impact c
 Direction=Direction
 Disabled=Disabled
 DiscardLocalChanges=Discard local changes
-DisconnectFromRepository=Disconnect from repository
+Disconnect=Disconnect
 Display=Display
 DoNotShowThisMessageAgain=Do not show this message again
 DoYouReallyWantToDelete=Do you really want to delete {0}
@@ -301,7 +302,7 @@ ExternalSourceChange=External source change
 Factor=Factor
 Factors=Factors
 FailedToLoadFlowProperty=Failed to load flow property
-Fetch=Fetch...
+Fetch=Fetch
 FetchRemoteModel=Fetch remote model
 FetchingChanges=Fetching changes
 FetchingCommits=Fetching commits
@@ -486,6 +487,7 @@ MediumOpportunity=Medium opportunity
 MediumRisk=Medium risk
 MemoryToHighMessage=The memory value is to high for your operating system.
 MemoryToLowMessage=The memory value must be at least 256 MB.
+Merge=Merge
 Message=Message
 Methods=Methods
 MinimalTree=minimal tree
@@ -662,6 +664,8 @@ Provider=Provider
 ProviderLinking=Provider linking
 Providers=Providers
 Publication=Publication
+Pull=Pull
+Push=Push
 QuantitativeReference=Quantitative reference
 Quantity=Quantity
 QuickResults=Quick results
