Added property labels and model dependencies for new types

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -385,7 +385,9 @@ ImpactCategories=Impact categories
 ImpactCategory=Impact category
 ImpactFactor=Characterization factor
 ImpactFactors=Characterization factors
+ImpactMethod=Impact method
 ImpactResult=Impact assessment result
+ImpactResults=Impact results
 Import=Import...
 ImportData=Import data
 ImportDatabase=Import database
@@ -412,6 +414,7 @@ Input=Input
 InputOutput=Input/Output
 InputParameter=Input parameter
 InputParameters=Input parameters
+InputResults=Inventory results (resources)
 Inputs=Inputs
 InputsOutputs=Inputs/Outputs
 IntendedApplication=Intended application
@@ -470,6 +473,7 @@ Longitude=Longitude
 LowOpportunity=Low opportunity
 LowRisk=Low risk
 ManagePlugins=Manage plugins
+Manufacturer=Manufacturer
 Map=Map
 MapCanNotBeDisplayed=Map can not be displayed, do you have an active internet connection?
 Mark=Mark
@@ -501,6 +505,7 @@ ModelGraph=Model graph
 ModelType=Model type
 ModelingAndValidation=Modeling and validation
 ModelingConstants=Modeling constants
+Modules=Modules
 MonteCarloSimulation=Monte Carlo Simulation
 MoreThanXProcesses=More than 2000 processes will be displayed, this will take a while. Continue anyway?
 Move=move
@@ -595,6 +600,7 @@ OpenUpdateManager=Open Update Manager
 Other=Other
 OutOfMemory=Out of memory
 Output=Output
+OutputResults=Inventory results (emissions)
 Outputs=Outputs
 OverwriteRemoteChanges=Overwrite remote changes
 OverwriteFile=Overwrite file
@@ -610,6 +616,7 @@ Parameters=Parameters
 ParameterSets=Parameter sets
 Password=Password
 Paste=Paste
+Pcr=PCR
 PedigreeMatrix=Pedigree matrix
 PedigreeMatrixMessage=Click on the matrix cells to select entries
 Physical=Physical
@@ -655,6 +662,7 @@ ProductSystemExcelExport=Product system Excel export
 ProductSystemExcelExportMessage=Please select a directory to export the product system to.
 ProductSystemStatistics=Product system statistics
 ProductSystems=Product systems
+ProgramOperator=Program operator
 Progress=Progress
 Project=Project
 ProjectSetup=Project setup
@@ -886,6 +894,7 @@ UpdatingProductSystem=Updating product system
 UpgradingRepositoryIndex=Upgrading repository index
 UpstreamInclDirect=Upstream incl. direct
 UpstreamTotal=Upstream total
+Urn=URN
 Usage=Usage
 UsageOf=Usage of
 UsageType=Usage type
@@ -899,6 +908,7 @@ Value=Value
 Variant=Option
 VariantDescriptionTable=Product system description table
 Variants=Compared product systems
+Verifier=Verifier
 Version=Version
 VersionNewer=Version newer
 VeryHighRisk=Very high risk
