Renamed collaboration server libraries (check) to restrictions (check)

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -79,9 +79,7 @@ CategoryNotEmpty=The category is not empty.
 Causal=Causal
 CausalAllocation=Causal allocation
 Change=Change
-CheckAgainstLibraries=Check against libraries
 CheckLinkingProperties=Check linking properties
-CheckingAgainstLibraries=Checking against libraries
 CheckingOutCommit=Checking out commit
 Checkout=Checkout...
 ChooseDirectory=Choose directory...
@@ -457,8 +455,6 @@ LayoutAs=Layout as {0}
 LciaCategoryDescriptionTable=LCIA category description table
 LciaResultTable=LCIA result table
 LibgfortanInfo=openLCA uses a native library for improved calculation performance. It requires the package libgfortran3 to be installed on Linux which seems to be not the case on your system. We recommend to install this package if you want to use the improved calculation features of openLCA. If you are running an Ubuntu system try installing the package with 'apt-get install libgfortran3'
-Library=Library
-LibraryDataSets=Library data sets
 Line=Line
 LinkingProperties=Linking properties
 LoadingRepositoryList=Loading repository list
@@ -682,7 +678,6 @@ ReallyDeleteShapeFile=Do you really want to delete the selected shape file? All 
 RebuildIndex=Rebuild index
 RebuildingIndex=Rebuilding index
 RecalculateQuestion=Values will be recalculated, do you want to proceed?
-RecognizedLibraryDatasetsDescription=Some of the selected data sets were identified as library data sets (e.g. may underlie license restrictions). If you are allowed to commit changes to these data sets, they are marked with a yellow warning sign, otherwise with a red forbidden sign.
 ReconnectProcesslink=reconnect processlink
 Reference=Reference
 ReferenceCurrency=Reference currency
@@ -723,6 +718,7 @@ ResetAll=Reset all
 ResetSelection=Reset selection
 Resize=resize
 RestoreDatabase=Restore database
+Restriction=Restriction
 Result=Result
 Results=Results
 ResultsOf=Results of
