--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -70,8 +70,6 @@ CategoryNotEmpty=Diese Kategorie ist nicht leer.
 Causal=Kausal
 CausalAllocation=Kausale Allokation
 Change=\u00C4ndern
-CheckAgainstLibraries=Vergleiche mit Bibliotheken
-CheckingAgainstLibraries=Vergleiche mit Bibliotheken
 CheckingOutCommit=Commit auschecken
 Checkout=Checkout...
 ChooseDirectory=Verzeichnis ausw\u00E4hlen...
@@ -408,8 +406,7 @@ LayoutAs=Als {0} anordnen
 LciaCategoryDescriptionTable=Tabelle mit Beschreibung der LCIA-Kategorien
 LciaResultTable=Wirkungsabsch\u00E4tzungs-Ergebnistabelle
 LibgfortanInfo=openLCA benutzt eine native Mathebibliothek f\u00FCr bessere Rechenleistung. F\u00FCr Linux wird die Installation des Pakets libgfortran3 ben\u00F6tigt, was auf Ihrem System nicht der Fall zu sein scheint. Wir empfehlen dieses Paket zu installieren, wenn Sie von der verbesserten Rechenleistung von openLCA profitieren m\u00F6chten. Wenn Sie ein Ubuntu System benutzen, versuchen Sie das Paket mit\u00A0'apt-get install libgfortran3' zu installieren
-Library=Bibliothek
-LibraryDataSets=Datens\u00E4tze aus Bibliothek
+RestrictedDataSets=Zugangsbeschränkte Datens\u00E4tze
 Line=Linie
 Local=Lokal
 LocalDatabase=Lokale Datenbank
