--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -219,7 +219,7 @@ Delete=Delete
 DeleteCategoryQuestion=Do you really want to delete the selected category?
 DeleteDatabase=Delete database
 DeleteFile=Delete file
-DeleteLocalModel=Delete local model
+DeleteLocalDataset=Delete local dataset
 DeleteProcess=delete process
 DeleteProcesslink=delete processlink
 DeleteReportSectionQuestion=Do you really want to delete this report section?
@@ -230,14 +230,12 @@ DependentParameter=Dependent parameter
 DependentParameters=Dependent parameters
 Description=Description
 DeveloperTools=Developer tools
-Diff=Diff
 Direct=Direct
 DirectContribution=Direct contribution
 DirectContributionsFlowResultsOverview=Top 5 contributions to flow results - overview
 DirectContributionsImpactCategoryResultsOverview=Top 5 contributions to impact category results - overview
 Direction=Direction
 Disabled=Disabled
-DiscardLocalChanges=Discard local changes
 Disconnect=Disconnect
 Display=Display
 DoNotShowThisMessageAgain=Do not show this message again
@@ -301,7 +299,6 @@ Factor=Factor
 Factors=Factors
 FailedToLoadFlowProperty=Failed to load flow property
 Fetch=Fetch
-FetchRemoteModel=Fetch remote model
 FetchingChanges=Fetching changes
 FetchingCommits=Fetching commits
 FetchingData=Fetching data
@@ -394,6 +391,7 @@ ImportEcoSpold01DataSets=Import EcoSpold 01 data sets
 ImportEcoSpold02DataSets=Import EcoSpold 02 data sets
 ImportEcoSpoldGeographies=Import EcoSpold2 geographies
 ImportILCD=Import ILCD
+ImportRemoteDataset=Import remote dataset
 ImportKMLGeographies=Import KML geographies
 ImportingKMLData=Importing KML data
 ImportingXMLData=Importing XML (EcoSpold2 format) data
@@ -438,8 +436,8 @@ IsProtected=Is protected
 IsReference=Is reference
 IsWithCosts=Is with costs
 IsWithRegionalization=Is with regionalization
-KeepLocalModel=Keep local model
-KeepModelDeleted=Keep model deleted
+KeepLocalDataset=Keep local dataset
+KeepDatasetDeleted=Keep dataset deleted
 KmlEditor=KML Editor
 LCCAddedValuesTable=LCC\: Added values table
 LCCNetcostsTable=LCC\: Net-costs table
@@ -598,6 +596,7 @@ OutOfMemory=Out of memory
 Output=Output
 OutputResults=Inventory results (emissions)
 Outputs=Outputs
+OverwriteLocalChanges=Overwrite local changes
 OverwriteRemoteChanges=Overwrite remote changes
 OverwriteFile=Overwrite file
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
